--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.no-data-msg {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
