--- a/src/assets/css/RegularButton.css
+++ b/src/assets/css/RegularButton.css
@@ -36,8 +36,27 @@
   width: 180px;
 }
 
-.btn-icon {
+.add-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center horizontally */
+  flex: 0 0 auto;
+  padding: 10px 24px;
+  background-color: #6ea8cc;
+  color: #fff;
+  height: 60px;
+  width: auto;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.btn-icon-left {
   margin-right: 8px;
+}
+
+.btn-icon-right {
+  margin-left: 8px;
 }
 
 .primary {
