--- a/src/assets/css/RegularButton.css
+++ b/src/assets/css/RegularButton.css
@@ -12,7 +12,7 @@
 
 .print-btn {
   padding: 10px 24px;
-  background-color: #6ea8cc;
+  background-color: #2663A9;
   color: #fff;
   height: 60px;
   margin-top: auto;
@@ -34,6 +34,36 @@
   margin-left: auto;
   margin-right: 0;
   width: 180px;
+}
+
+.save-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center horizontally */
+  flex: 0 0 auto;
+  padding: 10px 24px;
+  background-color: #6ea8cc;
+  color: #fff;
+  height: 60px;
+  width: auto;
+  margin-top: auto;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.print-save-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center horizontally */
+  flex: 0 0 auto;
+  padding: 10px 24px;
+  background-color: #2663A9;
+  color: #fff;
+  height: 60px;
+  width: 320px;
+  margin-top: auto;
+  margin-left: 10px;
+  margin-right: 0;
 }
 
 .add-btn {
