--- a/src/assets/css/RegularButton.css
+++ b/src/assets/css/RegularButton.css
@@ -66,6 +66,21 @@
   margin-right: 0;
 }
 
+.print-add-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center horizontally */
+  flex: 0 0 auto;
+  padding: 10px 24px;
+  background-color: #5F6165;
+  color: #fff;
+  height: 60px;
+  width: 320px;
+  margin-top: auto;
+  margin-left: 10px;
+  margin-right: 0;
+}
+
 .add-btn {
   display: flex;
   align-items: center;
