Check print done

--- a/src/assets/css/PrintModal.css
+++ b/src/assets/css/PrintModal.css
@@ -61,7 +61,16 @@
   .__check_data {
     display: none;
   }
-  .check img {
+  .check-inputs-print {
     display: none;
   }
+  .check-num-print {
+    display: none;
+  }
+  .check-border {
+    display: none;
+  }
+  /* .check img {
+    display: none;
+  } */
 }
