--- a/src/assets/css/Settings.css
+++ b/src/assets/css/Settings.css
@@ -9,7 +9,7 @@
 
 .settings-form-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr) auto;
   max-width: 100%;
   /* margin: 0 auto; */
   grid-gap: 10px;
