--- a/src/assets/css/Stats.css
+++ b/src/assets/css/Stats.css
@@ -5,7 +5,7 @@
 
 .stats-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: auto 1fr;
   max-width: 100%;
   margin: 0 auto;
   grid-gap: 10px;
