--- a/src/assets/css/Stats.css
+++ b/src/assets/css/Stats.css
@@ -5,10 +5,18 @@
 
 .stats-container {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: repeat(3, 1fr);
   max-width: 100%;
   margin: 0 auto;
   grid-gap: 10px;
+}
+
+.kpis-container {
+  display: grid;
+  grid-template-columns: 360px auto;
+  max-width: 100%;
+  margin: 0 auto;
+  grid-gap: 50px 10px;
 }
 
 @media screen and (max-width: 1200px) {
