--- a/src/assets/css/Stats.css
+++ b/src/assets/css/Stats.css
@@ -13,7 +13,7 @@
 
 .kpis-container {
   display: grid;
-  grid-template-columns: 360px auto;
+  grid-template-columns: auto auto;
   max-width: 100%;
   margin: 0 auto;
   grid-gap: 50px 10px;
@@ -23,6 +23,14 @@
   .stats-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    max-width: 100%;
+    margin: 0 auto;
+    grid-gap: 10px;
+  }
+  
+  .kpis-container {
+    display: grid;
+    grid-template-columns: 1fr;
     max-width: 100%;
     margin: 0 auto;
     grid-gap: 10px;
