--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,97 @@
 .event-popup-text{
   text-align: left;
 }
+
+body{
+  margin: 0 !important;
+}
+.check{
+  position: relative;
+  margin: 0;
+  /* margin-left: -189px !important;
+  margin-top: 189px;
+  transform: rotate(270deg); */
+}
+.check_data{
+  position: absolute;
+  font-family: 'DM Mono';
+}
+.montant{
+  left: 540px;
+  top: 20px;
+}
+.montant_ecrit_line1{
+  left: calc(50% + 30px);
+  transform: translate(-50%);
+  top: 65px;
+}
+.montant_ecrit_line2{
+  left: calc(50% + 30px);
+  top: 90px;
+  transform: translate(-50%);
+  width: 100%;
+  text-align: center;
+}
+.montant_to{
+  left: 110px;
+  top: 120px;
+}
+.date{
+  top: 219px;
+  font-size: 14px;
+}
+.montant_a_fr{
+  left: 230px;
+  font-size: 13px;
+}
+.montant_le{
+  left: 315px;
+  font-size: 12px;
+}
+.montant_a_ar{
+  left: 420px;
+  font-size: 14px;
+}
+
+@media print {
+  body {
+    overflow: hidden;
+    
+  }
+#check{
+  page-break-before: always;
+}
+.print {
+    page-break-before: always;  
+  }
+  .__check_data { display: none; }
+  img { display: none; }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+
+
+.custom-button {
+  padding: 15px 40px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  width: auto;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.custom-button.primary {
+  background-color: #ee8432;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+.custom-button.primary:hover {
+  background-color: #5795be;
+}
