--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,18 @@ code {
   color: #fff !important;
   cursor: pointer;
 }
+
+.calendar-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
+  z-index: 10; 
+}
+
+.calendar-overlay.active {
+  display: block;
+}
