--- a/src/App.css
+++ b/src/App.css
@@ -509,6 +509,19 @@ body {
   border: 1px solid red;
   color: red;
 }
+.btn_record {
+  border: 1px solid green;
+  color: green;
+  background-color: transparent; 
+  transition: background-color 0.3s, color 0.3s; 
+  padding: 8px 12px; 
+  border-radius: 4px; 
+}
+
+.btn_record:hover {
+  background-color: lightgreen; 
+  color: white; 
+}
 
 .btn_delete:hover{
   background-color: red;
