--- a/src/assets/css/Stats.css
+++ b/src/assets/css/Stats.css
@@ -13,7 +13,7 @@
 
 .kpis-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: repeat(1, 1fr); 
   max-width: 100%;
   margin: 0 auto;
   grid-gap: 50px 10px;
@@ -30,11 +30,12 @@
   
   .kpis-container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr); 
     max-width: 100%;
     margin: 0 auto;
     grid-gap: 10px;
   }
+  
 }
 
 @media screen and (max-width: 768px) {
@@ -46,3 +47,4 @@
     grid-gap: 10px;
   }
 }
+
