--- a/src/assets/css/PrintModal.css
+++ b/src/assets/css/PrintModal.css
@@ -52,7 +52,7 @@
   .check {
     /* margin-left: -189px !important;
     margin-top: 189px; */
-    transform: rotate(270deg);
+    transform: rotate(270deg); /* TODO */
     border: none !important;
     page-break-before: always;
   }
