--- a/src/assets/css/PrintModal.css
+++ b/src/assets/css/PrintModal.css
@@ -151,4 +151,12 @@
   .traite .checkmontantbas{
     top: 150px !important;
   }
+  .check-only .check-only-amount{
+    top: 25px !important;
+    /* top: 33px !important; */
+    font-size: 14px !important;
+  }
+  .check-only .bottom_date_div{
+    top: -3px !important;
+  }
 }
